# BitSun-Engine

./: Cargo.toml  readme.md
assets/shaders/: triangle.vert
src/: application.rs  camera.rs  lib.rs  main.rs  model.rs  shader.wgsl  texture.rs
src/renderer/: builder.rs  g_buffer.rs  mod.rs  queues.rs  renderer.rs  renderpass_manager.rs  shaders.rs  uniform_manager.rs  window.rs
